Fix on narrow screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ header {
 }
 
 .content-cat-nav {
-    margin-top: 1em;
+    margin: 1em 0;
     border-top: solid 1px #ddd;
     padding-top: 1em;
 
